pedro_respaldiza/session3/exercise02/network-police.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-wp-allow
  namespace: exercise-02
spec:
  podSelector:
    matchLabels:
      app: mariadb
      type: database
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
          type: frontend
    ports:
    - protocol: TCP
      port: 3306
